<resources>
    <string name="app_name">Challenge_04p2</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="change_dessert">Change dessert</string>
    <string name="name_label_text">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="address">Address</string>
    <string name="address_label_text">Address</string>
    <string name="enter_address_hint">Enter address</string>
    <string name="phone_label_text">Phone</string>
    <string name="note">Note</string>
    <string name="enter_note">Enter note</string>
    <string name="choose_a_delivery_method">Choose a delivery method:</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="chocolate_syrup"> Chocolate syrup </string>
    <string name="sprinkles"> Sprinkles </string>
    <string name="cherries"> Cherries </string>
    <string name="crushed_nuts"> Crushed nuts </string>
    <string name="orio_cookie_crumbles"> Orio cookie crumbles </string>
    <string name="show_toast">SHOW TOAST</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>